fix:debug overflow

--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ ul {
   /* Adaptive */
 
   @media screen and (max-width: 800px) {
+    html{
+      overflow: visible;
+    }
     .container {
       position: absolute;
       max-width: 100%;
